# ethminer-lite

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.txt  keccak-1600.cpp  keccak.h  keccak_test.cpp
include/: ethash.h  keccak.h  types.h
src/: ethash.cpp  keccak-1600.cpp  keccak.cpp
test/: keccak_test.cpp
